# graphia

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  graphia-architecture.mermaid  pyproject.toml
.awos/commands/: _tutorial.md  adr.md  architecture.md  change-request.md  hire.md  implement.md  product.md  roadmap.md  spec.md  tasks.md  tech.md  verify.md
.awos/scripts/: create-tutorial-directory.sh
.awos/templates/: adr-template.md  agent-template.md  change-request-template.md  (+2 more)
.claude/: settings.json
context/: backlog.md  project-timeline.html  project-timeline.md
evals/: README.md  blunder-ledger.yaml
tests/: conftest.py  test_abandoned_game.py  test_app_boot.py  test_behavioral_integrity.py  test_blunder_eval.py  test_blunder_eval_detectors.py  test_blunder_eval_provenance.py  test_boto3_api_contract.py  test_career_consumer_lambda.py  test_career_event_store.py  test_career_stats.py  test_config_auth.py  test_configurable_lineup.py  test_day_context_privacy.py  test_day_turn_ui_repro.py  test_diary_store.py  test_dual_mode_smoke.py  test_eval_transcript.py  test_gateway_mcp_smoke.py  test_instrument_capture.py  test_lambda_zip_contents.py  test_ledger_model.py  test_ledger_viewer.py  test_lineup_config.py  test_lineup_recording.py  test_llm_provider_config.py  test_llm_provider_construction.py  test_multi_round_consensus.py  test_node_emissions.py  test_ollama_preflight.py  test_outcome_tracking.py  test_personas.py  test_pipeline_equivalence.py  test_play_as_role.py  test_quit_modal.py  test_recap_aware_reasoning.py  test_recap_game_time.py  test_remote_mode_smoke.py  test_remote_observability_live.py  test_role_guidance.py  (+26 more)
tools/: verify_pipeline.py
(+359 files in other folders)
