[project]
name = "testproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=1.9.0",
    "langchain-aws>=1.4.4",
    "langchain-core>=1.3.0",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "mcp>=1.27.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "textual>=8.2.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-textual-snapshot>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
