[project]
name = "testproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro>=0.10.0",
    "bedrock-agentcore>=1.9.0",
    "langchain-anthropic>=1.4.5",
    "langchain-aws>=1.4.4",
    "langchain-core>=1.3.0",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "mcp>=1.27.1",
    "openinference-instrumentation-langchain>=0.1.65",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "textual>=8.2.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-textual-snapshot>=1.0.0",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
